# moth

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.moth/: .current  config.yml
.moth/doing/: gelkc-med-create_bdd_int_tests.md  i2puc-med-hooks.md  jbl6b-med-completetion.md  qvw3w-med-start_option_for_new.md
.moth/done/: 2bjen-med-documentation.md  5bsq3-med-make_no_edit_a_project_level_config_yaml.md  64nii-med-apt.md  dnov3-med-show_with_no_args_shows_current.md  dp59o-med-commit_hook.md  fg51l-med-ls_should_take_severity_as_an_argument.md  s8t5d-med-moth_new_with_editing_disabled_should_complete_successfully.md
.moth/ready/: 002-nzquz-med-standup.md  64nii-med-apt.md  dp59o-med-commit-hook.md  eobhc-med-priority.md  jbl6b-med-completetion.md  lr0gg-med-severity_is_configurable.md  mmw9i-med-homebrew.md  rxj8y-med-report.md  sdgpx-med-bug_start_edit_opens_wrong_file.md  vfuy6-med-auto_commit.md  w448b-med-add_code_commits_to_report.md  xii28-med-operations_should_resist_missing_moth_directories.md
docs/: index.html
scripts/: install-hooks.sh  pre-commit
src/: config.rs  issue.rs  lib.rs  main.rs  store.rs
src/cmd/: claude.rs  done.rs  edit.rs  hook.rs  init.rs  lifecycle_hooks.rs  list.rs  mod.rs  mv.rs  new.rs  prefix.rs  priority.rs  report.rs  rm.rs  severity.rs  show.rs  start.rs
tests/: cucumber.rs  e2e_shell_test.rs  e2e_test.sh  integration_test.rs
tests/features/: hook.feature  init.feature  issues.feature  listing.feature  priority.feature  severity.feature  workflow.feature
tests/steps/: given.rs  (+4 more)
(+4 files in other folders)
