[package]
name = "moth"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
rand = "0.8"
colored = "2"
git2 = "0.19"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
