[package]
name = "moth"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
rand = "0.8"
colored = "2"
git2 = "0.19"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"

[[test]]
name = "cucumber"
harness = false


[package.metadata.deb]
maintainer = "Tom Marsh <tsmarsh@gmail.com>"
copyright = "2025, Moth Contributors <MIT>"
license-file = ["LICENSE", "4"]
extended-description = """\
Moth is a git-style, file-based issue tracker that stores issues as markdown files.
It's designed to be simple, transparent, and git-friendly, offering an alternative
to commercial issue tracking systems."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/moth", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/moth/", "644"],
]
